add Testing_TradingFloor class

--- a/Server/.gitignore
+++ b/Server/.gitignore
@@ -113,5 +113,8 @@ compile_commands.json
 *.cxxflags
 *.cflags
 
+# Bilde
+*.json
+*.idx
 
 # End of https://www.toptal.com/developers/gitignore/api/qtcreator,qt,c++
